--- a/rootdir/etc/init.duma.rc
+++ b/rootdir/etc/init.duma.rc
@@ -15,6 +15,7 @@
 #
 
 import init.duma.usb.rc
+import init.duma.power.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
@@ -352,9 +353,8 @@ on property:ro.data.large_tcp_window_size=true
     # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
     write /proc/sys/net/ipv4/tcp_adv_win_scale  1
 
-service charger /sbin/healthd -c
+service charger /charger
     class charger
-    critical
     seclabel u:r:healthd:s0
 
 service thermald /system/bin/thermald
